--- a/Project/CIS4930-mananahuja/CIS4930-mananahuja/CIS4930-mananahuja.vcxproj.filters
+++ b/Project/CIS4930-mananahuja/CIS4930-mananahuja/CIS4930-mananahuja.vcxproj.filters
@@ -18,15 +18,12 @@
     <ClCompile Include="MyForm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="CandleStick.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyForm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CandleStick.h">
+    <ClInclude Include="candleStick.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
