--- a/Project/CIS4930-mananahuja/CIS4930-mananahuja/CIS4930-mananahuja.vcxproj
+++ b/Project/CIS4930-mananahuja/CIS4930-mananahuja/CIS4930-mananahuja.vcxproj
@@ -20,10 +20,10 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
-    <ProjectGuid>{ecbeab93-3067-4f3e-878c-172be202a10b}</ProjectGuid>
+    <ProjectGuid>{785fc0e2-4a84-4d71-9463-78dfb753f46c}</ProjectGuid>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <Keyword>ManagedCProj</Keyword>
-    <RootNamespace>Project1</RootNamespace>
+    <RootNamespace>CIS4930_mananahuja</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,11 +127,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CandleStick.cpp" />
     <ClCompile Include="MyForm.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CandleStick.h" />
+    <ClInclude Include="candleStick.h" />
     <ClInclude Include="MyForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
